[package]
name = "interner"
version = "0.1.0"
authors = ["Andreas Jonson <andjo403@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[profile.release]
debug = 2

[dev-dependencies]
fxhash = "0.2.1"
rayon = "1.3"
criterion = "0.3"
num_cpus = "1.12.0"
smallvec = { version = "1.0", features = ["union", "may_dangle"] }

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[features]
no-simd = []

[[bench]]
name = "interner_bench"
harness = false

[[bench]]
name = "std_hashmap_bench"
harness = false

[[bench]]
name = "sharded_hashmap_bench"
harness = false