[package]
name = "interner"
version = "0.1.0"
authors = ["Andreas Jonson <andjo403@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot_core = "0.8.5"

[profile.release]
debug = 2

[dev-dependencies]
fxhash = "0.2.1"
rayon = "1.7"
criterion = "0.4"
smallvec = { version = "1.0", features = ["union", "may_dangle"] }

[features]

[[bench]]
name = "interner_bench"
harness = false

[[bench]]
name = "std_hashmap_bench"
harness = false

[[bench]]
name = "sharded_hashmap_bench"
harness = false